syntax = "proto3";

message ResponseCode {
    int32 code = 1;
    string message = 2;
}

message PassengerFeedback {
    string bookingCode = 1;
    int32 passengerID = 2;
    string feedback = 3;
}

message AddPassengerFeedbackResponse {
    ResponseCode responseCode = 1;
}

message GetPassengerFeedbackRequest{
    string bookingCode = 1;
    int32 passengerID = 2;
}

message GetPassengerFeedbackResponse {
    ResponseCode responseCode = 1;
    PassengerFeedback passengerFeedback = 2;
}

message GetPassengerFeedbacksResponse {
    ResponseCode responseCode = 1;
    repeated PassengerFeedback passengerFeedbacks = 2;
}

message DeletePassengerFeedbackRequest{
    int32 passengerID = 1;
}

message DeletePassengerFeedbackResponse {
    ResponseCode responseCode = 1;
}

service PassengerService{
    rpc AddPassengerFeedback(PassengerFeedback) returns (AddPassengerFeedbackResponse);
    rpc GetPassengerFeedbackByPassengerId(GetPassengerFeedbackRequest) returns (GetPassengerFeedbacksResponse);
    rpc GetPassengerFeedbackByBookingCode(GetPassengerFeedbackRequest) returns (GetPassengerFeedbackResponse);
    rpc DeletePassengerFeedbackPassengerId(DeletePassengerFeedbackRequest) returns (DeletePassengerFeedbackResponse);
}
